# SVComparator

./: CMakeLists.txt  README.md  common.h  compare-del.cpp  compare-ins.cpp
lib/: ssw.c
